# poc-next-fastapi

./: .gitignore  AGENTS.md  Makefile  README.md  compose.local.yml  compose.yml  pyrightconfig.json
api/: Dockerfile  main.py  pyproject.toml
api/alembic/: README  env.py
api/alembic/versions/: 001_create_properties_table.py  002_create_users_table.py  003_seed_properties.py
api/app/: __init__.py  config.py  database.py
api/app/analyze/: __init__.py
api/app/analyze/adapters/: __init__.py
api/app/analyze/adapters/in_/: __init__.py
api/app/analyze/adapters/in_/http/: __init__.py  router.py
api/app/analyze/application/: __init__.py  services.py
api/app/analyze/domain/: __init__.py  schemas.py
api/app/models/: __init__.py  property.py  user.py
api/app/property/: __init__.py
api/app/property/adapters/: __init__.py
api/app/property/adapters/in_/: __init__.py
api/app/property/adapters/in_/http/: __init__.py  router.py
api/app/property/application/: __init__.py  services.py
api/app/property/domain/: __init__.py  model.py
api/app/routers/: analyze.py  properties.py  users.py
api/app/schemas/: __init__.py  property.py  user.py
api/app/shared/: __init__.py  config.py  database.py
api/app/user/: __init__.py
api/app/user/adapters/: __init__.py
api/app/user/adapters/in_/: __init__.py
api/app/user/adapters/in_/http/: __init__.py  router.py
api/app/user/application/: __init__.py  services.py
api/app/user/domain/: __init__.py  model.py  schemas.py
web/: Dockerfile  components.json  package.json  pnpm-lock.yaml
web/app/: globals.css  (+2 more)
(+62 files in other folders)
