[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "fal>=0.9.1",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.60.0",
    "openai>=2.16.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
